.helm/slm/templates/keycloak/keycloak-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-database
  labels:
    app: keycloak-database
spec:
  type: ClusterIP
  selector:
    app: keycloak-database
  ports:
    - name: internal
      protocol: TCP
      port: 3306
      targetPort: 3306
    - name: external
      protocol: TCP
      port: 4406
      targetPort: 3306
